# ollama-usage

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ollama_usage/: __init__.py  cli.py  cookie.py  notify.py  scraper.py  widget.py
tests/: test_cli.py  test_notify.py  test_scraper.py
