[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-usage"
version = "0.1.1"
description = "CLI and Python library to check your Ollama Cloud quota usage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "ollama-usage contributors" }
]
keywords = ["ollama", "quota", "usage", "cli", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "colorama",
    "cryptography",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
notify = ["plyer"]
dev    = ["pytest", "pytest-cov", "plyer"]

[project.urls]
Homepage = "https://github.com/florian-croiset/ollama-usage"
Repository = "https://github.com/florian-croiset/ollama-usage"
"Bug Tracker" = "https://github.com/florian-croiset/ollama-usage/issues"
Changelog = "https://github.com/florian-croiset/ollama-usage/blob/main/CHANGELOG.md"

[project.scripts]
ollama-usage = "ollama_usage.cli:main"

[tool.setuptools]
packages = ["ollama_usage"]

[tool.pytest.ini_options]
testpaths = ["tests"]